Start of Challenge 2

--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -1428,11 +1428,7 @@
     }
    ],
    "source": [
-    "# your code here\n",
-    "\n",
-    "#pokemon[['Sales','Profit']].mean()\n",
-    "#superstore[['Sales','Profit']].mean()\n",
-    "\n",
+    "#Takes all rows with the 4 combo types and finds their means across the numerical columns\n",
     "pokemon[pokemon['Combo Type'].isin(types)].groupby('Combo Type').mean()"
    ]
   }
