Pokemon challenge 2 complete

--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -1072,7 +1072,10 @@
     "        return x['Type 1'] + '-' + x['Type 2']\n",
     "    \n",
     "pokemon['Combo Type'] = pokemon.apply(combo, axis = 1)\n",
-    "pokemon.head()"
+    "pokemon.head()\n",
+    "\n",
+    "#Erin used np.where where you find the first part, you replace with 2nd part, and if you don't find\n",
+    "#the nan, replace it with the third, not necessary to write a function"
    ]
   },
   {
@@ -1244,7 +1247,8 @@
    "source": [
     "# your code here \n",
     "top_5 = pokemon.nlargest(5,'A/D Ratio')\n",
-    "top_5"
+    "top_5\n",
+    "#can also se pokemon.sort_values"
    ]
   },
   {
@@ -1429,6 +1433,7 @@
    ],
    "source": [
     "#Takes all rows with the 4 combo types and finds their means across the numerical columns\n",
+    "\n",
     "pokemon[pokemon['Combo Type'].isin(types)].groupby('Combo Type').mean()"
    ]
   }
